--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -24,7 +25,9 @@
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2",
     "swiper": "^9.2.0",
     "typescript": "5.0.4"
   }
