--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.7.3",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.2",
     "swiper": "^9.2.0",
     "typescript": "5.0.4"
